--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.40.1",
+    "dotenv": "^17.0.1",
     "next": "14.2.29",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
