--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,3 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "next/typescript",
-    "some-other-config-you-use",
-    "prettier"
-  ]
+  "extends": ["next", "next/core-web-vitals", "eslint:recommended", "prettier"]
 }
